--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,10 @@ target_include_directories(OpenCRG PUBLIC
 
 # Installation rules
 set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/lib)
-install(TARGETS OpenCRG DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(TARGETS OpenCRG 
+	ARCHIVE DESTINATION lib
+	LIBRARY DESTINATION lib
+	COMPONENT library)
 
 #file(GLOB INCLUDES inc/*.h)
 #install(FILES ${INCLUDES} DESTINATION include)
